--- a/specs/AuthApi.yaml
+++ b/specs/AuthApi.yaml
@@ -132,7 +132,7 @@ paths:
             responseTemplates:
               application/json: |-
                  #set($res = $input.path('$'))
-                 {"message": "El mensaje de solicitud no se encuentra debidamente formateado."}
+                 {"message": "The request is not well formed."}
           401:
             statusCode: 401
             responseParameters:
@@ -142,7 +142,7 @@ paths:
             responseTemplates:
               application/json: |-
                  #set($res = $input.path('$'))
-                 {"message": "No se encuentra autorizado para realizar la operación."}
+                 {"message": "You are not authorized to perform this operation."}
 
           403:
             statusCode: 403
@@ -153,7 +153,7 @@ paths:
             responseTemplates:
               application/json: |-
                  #set($res = $input.path('$'))
-                 {"message": "La solicitud ha sido rechazada."}
+                 {"message": "The request has been rejected."}
 
           404:
             statusCode: 404
@@ -164,7 +164,7 @@ paths:
             responseTemplates:
               application/json: |-
                  #set($res = $input.path('$'))
-                 {"message": "El objeto no fue encontrado."}
+                 {"message": "The requested resource could not be found."}
 
           409:
             statusCode: 409
@@ -174,8 +174,12 @@ paths:
               method.response.header.Access-Control-Allow-Origin: '''*'''
             responseTemplates:
               application/json: |-
-                 #set($res = $input.path('$'))
-                 {"message": "La operación presentó un error durante la ejecución. :)"}
+                #set($res = $input.path('$'))
+                #set($cause = $input.path('$.cause'))
+                {
+                  "message": "The request could not be completed successfully.",
+                  "error" : $cause
+                }
 
           429:
             statusCode: 429
@@ -185,8 +189,8 @@ paths:
               method.response.header.Access-Control-Allow-Origin: '''*'''
             responseTemplates:
               application/json: |-
-                 #set($res = $input.path('$'))
-                 {"message": "Se ha excedido el número de solicitudes permitidas."}
+                #set($res = $input.path('$'))
+                {"message": "The number of allowed requests has been exceeded."}
 
           500|.*timed.*:
             statusCode: 500
@@ -196,8 +200,9 @@ paths:
               method.response.header.Access-Control-Allow-Origin: '''*'''
             responseTemplates:
               application/json: |-
-                 #set($res = $input.path('$'))
-                 {"message": "Error interno del servidor."}
+                #set($res = $input.path('$'))
+                #set($cause = $input.path('$.cause'))
+                 $cause.errorMessage
 
   /auth/change-password:
     post:
@@ -315,7 +320,7 @@ paths:
             responseTemplates:
               application/json: |-
                 #set($res = $input.path('$'))
-                {"message": "El mensaje de solicitud no se encuentra debidamente formateado.", "error": $res}
+                {"message": "The request is not well formed."}
           401:
             statusCode: 401
             responseParameters:
@@ -325,7 +330,7 @@ paths:
             responseTemplates:
               application/json: |-
                 #set($res = $input.path('$'))
-                {"message": "No se encuentra autorizado para realizar la operación.", "error": $res}
+                {"message": "The request is not authorized."}
 
           403:
             statusCode: 403
@@ -336,7 +341,7 @@ paths:
             responseTemplates:
               application/json: |-
                 #set($res = $input.path('$'))
-                {"message": "La solicitud ha sido rechazada.", "error" : $res}
+                {"message": "The request has been rejected."}
 
           404:
             statusCode: 404
@@ -347,7 +352,7 @@ paths:
             responseTemplates:
               application/json: |-
                 #set($res = $input.path('$'))
-                {"message": "The requested resource could not be found.", "error": $res}
+                {"message": "The requested resource could not be found."}
 
           ^409:.*:
             statusCode: 409
@@ -361,7 +366,7 @@ paths:
                 #set($cause = $res.errorMessage.replaceFirst('409:',''))
                 {
                   "message": "The request could not be completed successfully.",
-                  "cause": $cause
+                  "cause": "$cause"
                 }
 
           429:
@@ -373,9 +378,9 @@ paths:
             responseTemplates:
               application/json: |-
                 #set($res = $input.path('$'))
-                {"message": "Se ha excedido el número de solicitudes permitidas.", "error": $res}
+                {"message": "Se ha excedido el número de solicitudes permitidas."}
 
-          500|.*timed.*:
+          500|.*timed.*: 
             statusCode: 500
             responseParameters:
               method.response.header.Access-Control-Allow-Headers: '''*'''
@@ -387,8 +392,7 @@ paths:
                 #set($cause = $input.path('$.cause'))
                 {
                   "message": "The request could not be completed successfully.",
-                  "error" : $cause,
-                  "response": $res 
+                  "error" : $cause
                 }
   
   /auth/v2/change-password:
@@ -507,7 +511,7 @@ paths:
             responseTemplates:
               application/json: |-
                 #set($res = $input.path('$'))
-                {"message": "El mensaje de solicitud no se encuentra debidamente formateado."}
+                {"message": "The request is not well formed."}
           401:
             statusCode: 401
             responseParameters:
@@ -517,8 +521,7 @@ paths:
             responseTemplates:
               application/json: |-
                 #set($res = $input.path('$'))
-                {"message": "No se encuentra autorizado para realizar la operación."}
-
+                {"message": "You are not authorized to perform this operation."}
           403:
             statusCode: 403
             responseParameters:
@@ -528,7 +531,7 @@ paths:
             responseTemplates:
               application/json: |-
                 #set($res = $input.path('$'))
-                {"message": "La solicitud ha sido rechazada."}
+                {"message": "The request has been rejected."}
 
           404:
             statusCode: 404
@@ -539,7 +542,7 @@ paths:
             responseTemplates:
               application/json: |-
                 #set($res = $input.path('$'))
-                {"message": "El objeto no fue encontrado."}
+                {"message": "The requested resource could not be found."}
 
           409:
             statusCode: 409
@@ -550,7 +553,11 @@ paths:
             responseTemplates:
               application/json: |-
                 #set($res = $input.path('$'))
-                {"message": "La operación presentó un error durante la ejecución. :)"}
+                #set($cause = $input.path('$.cause'))
+                {
+                  "message": "The request could not be completed successfully.",
+                  "error" : $cause
+                }
 
           429:
             statusCode: 429
@@ -561,7 +568,7 @@ paths:
             responseTemplates:
               application/json: |-
                 #set($res = $input.path('$'))
-                {"message": "Se ha excedido el número de solicitudes permitidas."}
+                {"message": "The number of allowed requests has been exceeded."}
 
           500|.*timed.*:
             statusCode: 500
@@ -691,7 +698,7 @@ paths:
             responseTemplates:
               application/json: |-
                 #set($res = $input.path('$'))
-                {"message": "El mensaje de solicitud no se encuentra debidamente formateado."}
+                {"message": "The request is not well formed."}
           401:
             statusCode: 401
             responseParameters:
@@ -701,7 +708,7 @@ paths:
             responseTemplates:
               application/json: |-
                 #set($res = $input.path('$'))
-                {"message": "No se encuentra autorizado para realizar la operación."}
+                {"message": "You are not authorized to perform this operation."}
 
           403:
             statusCode: 403
@@ -712,7 +719,7 @@ paths:
             responseTemplates:
               application/json: |-
                 #set($res = $input.path('$'))
-                {"message": "La solicitud ha sido rechazada."}
+                {"message": "The request has been rejected."}
 
           404:
             statusCode: 404
@@ -723,7 +730,7 @@ paths:
             responseTemplates:
               application/json: |-
                 #set($res = $input.path('$'))
-                {"message": "El objeto no fue encontrado."}
+                {"message": "The requested resource could not be found."}
 
           409:
             statusCode: 409
@@ -734,7 +741,12 @@ paths:
             responseTemplates:
               application/json: |-
                 #set($res = $input.path('$'))
-                {"message": "La operación presentó un error durante la ejecución. :)"}
+                #set($cause = $input.path('$.cause'))
+                {
+                  "message": "The request could not be completed successfully.",
+                  "error" : $cause
+                }
+
 
           429:
             statusCode: 429
@@ -745,7 +757,7 @@ paths:
             responseTemplates:
               application/json: |-
                 #set($res = $input.path('$'))
-                {"message": "Se ha excedido el número de solicitudes permitidas."}
+                {"message": "The number of allowed requests has been exceeded."}
 
           500|.*timed.*:
             statusCode: 500
