--- a/specs/AuthApi.yaml
+++ b/specs/AuthApi.yaml
@@ -380,7 +380,7 @@ paths:
                 #set($res = $input.path('$'))
                 {"message": "The number of allowed requests has been exceeded."}
 
-          500|.*timed.*:
+          500.*timed.*:
             statusCode: 500
             responseParameters:
               method.response.header.Access-Control-Allow-Headers: '''*'''
