--- a/specs/AuthApi.yaml
+++ b/specs/AuthApi.yaml
@@ -657,10 +657,12 @@ components:
           properties:
             authentication:
               type: object
-                properties:
-                  login:
-                    type: string
-                    description: "The username or email address of the user."
+              properties:
+                login:
+                  type: string
+                  description: "The username or email address of the user."
+              required:
+                - login
             session:
               type: string
               description: "The session of the user generated previously."
